--- a/index.html
+++ b/index.html
@@ -118,6 +118,44 @@ button:hover, select:hover {
     border-radius: 20px;
     border: 2px solid var(--primary);
 }
+
+/* 📱 MOBILE OPTIMIZATION */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    .controls {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .board {
+        gap: 8px;
+        padding: 10px;
+    }
+
+    .cell {
+        width: 65px;
+        height: 65px;
+        font-size: 2.2rem;
+    }
+
+    #chatBox {
+        width: 90% !important;
+    }
+
+    #messages {
+        height: 90px !important;
+        font-size: 13px;
+    }
+
+    .popup-box {
+        width: 85%;
+        padding: 25px;
+    }
+}
+
 </style>
 </head>
 
