--- a/index.html
+++ b/index.html
@@ -167,6 +167,35 @@ button:hover, select:hover {
     <input id="playerX" class="player-input" value="Player X" oninput="updateScoreboard()">
     <input id="playerO" class="player-input" value="Player O" oninput="updateScoreboard()">
 </div>
+<!-- NAME MODAL -->
+<div id="nameModal" style="
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,0.85);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    z-index:999;
+">
+  <div style="
+      background:#161b2e;
+      padding:30px;
+      border-radius:20px;
+      width:280px;
+      border:2px solid #00ffe7;
+  ">
+    <h3 style="margin-bottom:15px;color:#fff;">Enter Player Names</h3>
+
+    <input id="nameX" placeholder="Player X name"
+      style="width:100%;margin-bottom:10px;padding:8px;border-radius:10px;">
+
+    <input id="nameO" placeholder="Player O / AI"
+      style="width:100%;margin-bottom:15px;padding:8px;border-radius:10px;">
+
+    <button onclick="saveNames()" style="width:100%">Start Game</button>
+  </div>
+</div>
+
 
 <div id="scoreboard">X: 0 | O: 0 | Draws: 0</div>
 
