last upload of XO Neon Game

--- a/index.html
+++ b/index.html
@@ -193,7 +193,19 @@ button:hover, select:hover {
 
     <button onclick="saveMyName()" style="width:100%">Continue</button>
   </div>
+</div>
 
+    <h3 style="margin-bottom:15px;color:#fff;">Enter Player Names</h3>
+
+    <input id="nameX" placeholder="Player X name"
+      style="width:100%;margin-bottom:10px;padding:8px;border-radius:10px;">
+
+    <input id="nameO" placeholder="Player O / AI"
+      style="width:100%;margin-bottom:15px;padding:8px;border-radius:10px;">
+
+    <button onclick="saveNames()" style="width:100%">Start Game</button>
+  </div>
+</div>
 
 
 <div id="scoreboard">X: 0 | O: 0 | Draws: 0</div>
