Add multiplayer rooms, chat, player names, exit room UI

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@ button:hover, select:hover {
 </div>
 
 <div id="scoreboard">X: 0 | O: 0 | Draws: 0</div>
+<p id="roomStatus" style="display:none;color:#fff;margin-top:8px;"></p>
+
+<button id="exitRoomBtn"
+    onclick="exitRoom()"
+    style="display:none;margin-top:5px;">
+    Exit Room
+</button>
+
 
 <!-- 🔤 NAME MODAL (SINGLE NAME) -->
 <div id="nameModal" style="
