--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body{
 
 h1{color:#fff}
 
-.controls, .scoreboard-container{
+.controls,.scoreboard-container{
   display:flex;
   flex-wrap:wrap;
   gap:10px;
@@ -76,6 +76,7 @@ input,select,button{
   align-items:center;
   justify-content:center;
   z-index:999;
+  pointer-events:auto;
 }
 
 .popup-box{
@@ -83,16 +84,12 @@ input,select,button{
   padding:30px;
   border-radius:20px;
   border:2px solid var(--primary);
+  pointer-events:auto;
 }
 
-#popup {
-  pointer-events: auto;
+#playAgainBtn{
+  touch-action:manipulation;
 }
-
-.popup-box {
-  pointer-events: auto;
-}
-
 
 @media(max-width:600px){
   .cell{width:65px;height:65px;font-size:2.2rem}
@@ -110,7 +107,6 @@ input,select,button{
 </div>
 
 <div id="scoreboard">X: 0 | O: 0 | Draws: 0</div>
-
 <p id="roomStatus" style="display:none;color:#fff;"></p>
 
 <div class="controls">
@@ -120,9 +116,9 @@ input,select,button{
   </select>
 
   <select id="difficulty">
-    <option>easy</option>
-    <option>medium</option>
-    <option selected>hard</option>
+    <option value="easy">easy</option>
+    <option value="medium">medium</option>
+    <option value="hard" selected>hard</option>
   </select>
 
   <input id="roomCode" placeholder="Room Code">
@@ -156,11 +152,9 @@ input,select,button{
   <div class="popup-box">
     <h2 id="popupText"></h2>
     <button id="playAgainBtn">Play Again</button>
-
   </div>
 </div>
 
-<audio id="clickSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 <audio id="winSound" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3"></audio>
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
