--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 
 <style>
-:root {
+:root{
   --primary:#00ffe7;
   --secondary:#ff00de;
   --bg:#0b0f1a;
@@ -19,13 +19,13 @@ body{
   background:radial-gradient(circle,#1b2735,#090a0f);
   color:var(--primary);
   font-family:Poppins,sans-serif;
-  text-align:center;
   margin:0;
   min-height:100vh;
   display:flex;
   flex-direction:column;
   align-items:center;
   justify-content:center;
+  text-align:center;
 }
 
 h1{color:#fff}
@@ -37,7 +37,7 @@ h1{color:#fff}
   justify-content:center;
 }
 
-input,select,button{
+input,button{
   padding:8px 14px;
   border-radius:20px;
   border:2px solid var(--primary);
@@ -77,7 +77,6 @@ input,select,button{
   justify-content:center;
   z-index:999;
   pointer-events:auto;
-  touch-action: manipulation;
 }
 
 .popup-box{
@@ -88,10 +87,9 @@ input,select,button{
   pointer-events:auto;
 }
 
-#playAgainBtn {
-  pointer-events: auto;
-  touch-action: manipulation;
-  z-index: 1000;
+#playAgainBtn{
+  pointer-events:auto;
+  touch-action:manipulation;
 }
 
 @media(max-width:600px){
@@ -109,24 +107,13 @@ input,select,button{
   <input id="playerO" value="Player O" readonly>
 </div>
 
-<div id="scoreboard">X: 0 | O: 0 | Draws: 0</div>
+<div id="scoreboard">Player X vs Player O</div>
 <p id="roomStatus" style="display:none;color:#fff;"></p>
 
 <div class="controls">
-  <select id="mode">
-    <option value="ai">Player vs AI</option>
-    <option value="two">2 Players</option>
-  </select>
-
-  <select id="difficulty">
-    <option value="easy">easy</option>
-    <option value="medium">medium</option>
-    <option value="hard" selected>hard</option>
-  </select>
-
   <input id="roomCode" placeholder="Room Code">
-  <button onclick="createRoom()">Create</button>
-  <button onclick="joinRoom()">Join</button>
+  <button onclick="createRoom()">Create Room</button>
+  <button onclick="joinRoom()">Join Room</button>
   <button id="exitRoomBtn" onclick="exitRoom()" style="display:none">Exit</button>
 </div>
 
@@ -136,7 +123,9 @@ input,select,button{
 
 <!-- CHAT -->
 <div id="chatBox" style="width:300px">
-  <div id="messages" style="height:120px;overflow-y:auto;background:#111;padding:10px;border-radius:10px"></div>
+  <div id="messages"
+       style="height:120px;overflow-y:auto;background:#111;
+              padding:10px;border-radius:10px"></div>
   <input id="chatInput" placeholder="Message">
   <button onclick="sendMessage()">Send</button>
 </div>
@@ -155,11 +144,11 @@ input,select,button{
   <div class="popup-box">
     <h2 id="popupText"></h2>
     <button id="playAgainBtn" type="button">Play Again</button>
-
   </div>
 </div>
 
-<audio id="winSound" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3"></audio>
+<audio id="winSound"
+       src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3"></audio>
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
