--- a/index.html
+++ b/index.html
@@ -121,6 +121,28 @@ input,button{
 
 <div class="board" id="board"></div>
 
+<!-- 👤 MY PROFILE BADGE -->
+<div id="myProfile" style="
+  position:fixed;
+  top:12px;
+  right:12px;
+  background:#161b2e;
+  border:2px solid #00ffe7;
+  border-radius:14px;
+  padding:8px 14px;
+  color:#fff;
+  font-size:14px;
+  display:none;
+  z-index:1001;
+  box-shadow:0 0 10px rgba(0,255,231,0.4);
+">
+  <div id="myProfileName">👤 You</div>
+  <div id="myProfileStatus" style="font-size:12px;color:#00ffe7;">
+    Offline
+  </div>
+</div>
+
+
 <!-- CHAT -->
 <div id="chatBox" style="width:300px">
   <div id="messages"
