--- a/index.html
+++ b/index.html
@@ -91,61 +91,28 @@ input,button{
   pointer-events:auto;
   touch-action:manipulation;
 }
-
 #developerInfo {
   position: fixed;
   top: 12px;
   right: 12px;
-  background: rgba(22,27,46,0.96);
-  border: 1.5px solid #00ffe7;
+  background: rgba(22,27,46,0.9);
+  border: 1.5px solid var(--primary);
   border-radius: 14px;
   padding: 8px 14px;
-  z-index: 1200;
-  box-shadow: 0 0 15px rgba(0,255,231,0.35);
-  transition: all 0.3s ease;
+  text-align: right;
+  z-index: 1000;
+  box-shadow: 0 0 15px rgba(0,255,231,0.3);
 }
 
 #developerInfo .dev-name {
   color: #fff;
   font-weight: 600;
   font-size: 14px;
-  white-space: nowrap;
-}
-
-#developerInfo .dev-name a {
-  color: #00ffe7;
-  text-decoration: none;
-}
-
-#developerInfo .dev-name a:hover {
-  text-decoration: underline;
 }
 
 #developerInfo .dev-role {
-  color: #00ffe7;
+  color: var(--primary);
   font-size: 12px;
-}
-
-/* 📱 MOBILE MODE */
-@media (max-width: 600px) {
-  #developerInfo {
-    top: auto;
-    bottom: 10px;
-    left: 50%;
-    right: auto;
-    transform: translateX(-50%);
-    border-radius: 999px;     /* pill */
-    padding: 6px 14px;
-    text-align: center;
-  }
-
-  #developerInfo .dev-name {
-    font-size: 12px;
-  }
-
-  #developerInfo .dev-role {
-    display: none;            /* clean mobile UI */
-  }
 }
 
 /* 📱 Mobile adjustment */
@@ -218,16 +185,9 @@ input,button{
 
 <!-- 👤 DEVELOPER INFO -->
 <div id="developerInfo">
-  <div class="dev-name">
-    👨‍💻 Developed by
-    <a href="https://github.com/yourusername" target="_blank"
-       style="color:#00ffe7;text-decoration:none;">
-      Jeffrin Singh
-    </a>
-  </div>
+  <div class="dev-name">👨‍💻 Developed by Jeffrin Singh</div>
   <div class="dev-role">Full-Stack Developer</div>
 </div>
-
 
 
 
