--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>XO Neon Game</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+<!-- TAB ICON (FAVICON) -->
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
+
 
 <style>
 :root{
